--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2018"
 [dependencies]
 rand = "0.7"
 termion = "1.5.5"
+
+[dev-dependencies]
+bencher = "0.1.5"
+
+[[bench]]
+name = "bench"
+harness = false
